chore: changed postgres image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ x-n8n: &service-n8n
 
 services:
   postgres:
-    image: postgres:16-alpine
+    image: postgres:16
     networks: ["selfn8n"]
     restart: unless-stopped
     ports:
