--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ networks:
   selfn8n:
 
 x-n8n: &service-n8n
-  image: n8nio/n8n:1.86.0
+  image: n8nio/n8n:latest
   networks: ["selfn8n"]
   environment:
     - DB_TYPE=postgresdb
